[gd_scene load_steps=17 format=2]

[ext_resource path="res://sprites/skeleton1.png" type="Texture" id=1]
[ext_resource path="res://sprites/skeleton2.png" type="Texture" id=2]
[ext_resource path="res://sprites/knight2.png" type="Texture" id=3]
[ext_resource path="res://sprites/knight3.png" type="Texture" id=4]
[ext_resource path="res://sprites/knight1.png" type="Texture" id=5]
[ext_resource path="res://sprites/knight4.png" type="Texture" id=6]
[ext_resource path="res://scripts/enemy_knight_shield.gd" type="Script" id=7]
[ext_resource path="res://sprites/knight5.png" type="Texture" id=8]
[ext_resource path="res://sprites/knight_shield1.png" type="Texture" id=9]
[ext_resource path="res://sprites/knight_shield2.png" type="Texture" id=10]
[ext_resource path="res://sprites/knight_shield3.png" type="Texture" id=11]
[ext_resource path="res://sprites/knight_shield4.png" type="Texture" id=12]
[ext_resource path="res://sprites/knight_shield5.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "skeleton",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "knight_attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "knight_shield_pre_attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "knight",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "knight_shield",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "knight_pre_attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "knight_shield_attack",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 61.6875, 22.125 )

[node name="knight_shield" type="KinematicBody2D"]
script = ExtResource( 7 )

[node name="sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "knight_shield"
frame = 1

[node name="collider" type="CollisionShape2D" parent="."]
position = Vector2( -3, 0 )
shape = SubResource( 1 )

[node name="attack_area" type="Area2D" parent="."]

[node name="attack_collide" type="CollisionShape2D" parent="attack_area"]
position = Vector2( -89.3125, 2.125 )
shape = SubResource( 3 )

[connection signal="body_entered" from="attack_area" to="." method="_on_attack_area_body_entered"]
